<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:scrollbarStyle="insideOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/toolbar"
                    android:id="@+id/linearLayout">

                    <TextView
                        android:textSize="@dimen/timetable_head_text_size"
                        android:layout_width="7dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:id="@+id/textView1" />

                    <TextView
                        android:textSize="@dimen/timetable_head_text_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/mon"
                        android:id="@+id/textView2" />

                    <TextView
                        android:textSize="@dimen/timetable_head_text_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/tue"
                        android:id="@+id/textView3" />

                    <TextView
                        android:textSize="@dimen/timetable_head_text_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/wed"
                        android:id="@+id/textView4" />

                    <TextView
                        android:textSize="@dimen/timetable_head_text_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/thu"
                        android:id="@+id/textView5" />

                    <TextView
                        android:textSize="@dimen/timetable_head_text_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/fri"
                        android:id="@+id/textView6" />

                    <TextView
                        android:textSize="@dimen/timetable_head_text_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/sat"
                        android:id="@+id/textView7" />

                </LinearLayout>

                <android.support.v4.widget.NestedScrollView
                    android:id="@+id/scrollView1"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scrollbars="none"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="0dp"
                    android:scrollbarStyle="insideOverlay"
                    android:fillViewport="true">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="7"
                        android:id="@+id/gridLayout">

                    </GridLayout>
            </android.support.v4.widget.NestedScrollView>
        </LinearLayout>
    </HorizontalScrollView>
</FrameLayout>