<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context="com.gurpster.facapemobile.view.activities.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/about_app_version_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Version 1.0"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:text="is the result of a \ncourse completion work"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/about_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/me_link"
            android:autoLink="web"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="7dp"
            android:text="@string/gurpster_link"
            android:autoLink="web"
            android:textSize="18sp"/>

    </LinearLayout>

</FrameLayout>
